tests/golden/type_errors/struct_method_duplicate.cd
struct Person { name: string }

impl Person {
  fun greet(): string { return this.name; }
  fun greet(): string { return this.name; }
}
